--- a/mosaicov2/css/video.css
+++ b/mosaicov2/css/video.css
@@ -17,7 +17,7 @@
   overflow: hidden;
   border-radius: 5px;
   background-color: #000000;
-  border: 3px ridge #c2aa4b ;
+  border: 5px ridge #eb6099;
   cursor: pointer;
 }
 
@@ -30,7 +30,7 @@
   position: relative;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: #ffffff;
-  text-shadow: 0px 2px 5px #000000;
+  text-shadow: 0px 2px 5px #ec0062;
 }
 
 .videos > div:nth-child(1) {
